--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,11 @@ services:
   api:
     build:
       context: ./api
+    user: "${UID}:${GID}"
     volumes:
       - ./api:/usr/src/app
     environment:
+      DB_URL: postgresql://root:root@db:5432/mindgc
       FLASK_ENV: development
       UI_BASE_URL: http://localhost:8010
     ports:
